Fixed bottom sheet animation triggering scrollbar

--- a/backend/static/index.css
+++ b/backend/static/index.css
@@ -55,62 +55,52 @@ body {
   width: 100%;
   height: 14px;
   background-color: burlywood;
+  pointer-events: none;
 }
 
-#walking-dog-1-container {
+#bottom-sheet * {
+  pointer-events: none;
+}
+
+#bottom-sheet > div {
   position: absolute;
   z-index: 10;
-  bottom: 14px;
-  width: 100%;
+  min-width: 100%;
+  max-width: 100%;
   height: fit-content;
-  display: flex;
-  justify-content: flex-end;
-  animation: walking-1-container 120s infinite linear;
-  pointer-events: none;
+  overflow-x: hidden;
 }
 
 #walking-dog-1 {
-  min-width: 50px;
-  animation: walking-1 120s infinite linear;
-  pointer-events: none;
+  bottom: 14px;
 }
 
-#walking-dog-2-container {
-  position: absolute;
-  z-index: 10;
-  bottom: 0;
-  right: 0;
-  width: 100%;
-  height: fit-content;
+#walking-dog-1 > div {
+  margin-left: -50px;
+  width: calc(100% + 100px);
   display: flex;
-  justify-content: flex-start;
-  animation: walking-2-container 120s infinite linear;
-  pointer-events: none;
+  justify-content: flex-end;
+  animation: walking-1-container 120s infinite linear;
 }
 
 #walking-dog-2 {
-  min-width: 80px;
-  animation: walking-2 120s infinite linear;
-  pointer-events: none;
+  bottom: 0;
+  display: flex;
+  justify-content: flex-end;
 }
 
-@keyframes walking-1 {
-  0% {
-    transform: translateX(100%);
-  }
-
-  50% {
-    transform: translateX(0%);
-  }
-
-  100% {
-    transform: translateX(0%);
-  }
+#walking-dog-2 > div {
+  margin-left: -59px;
+  margin-right: -59px;
+  width: calc(100% + 118px);
+  display: flex;
+  justify-content: flex-start;
+  animation: walking-2-container 120s infinite linear;
 }
 
 @keyframes walking-1-container {
   0% {
-    width: 100%;
+    width: calc(100% + 100px);
   }
 
   50% {
@@ -119,30 +109,16 @@ body {
 
   100% {
     width: 0;
-  }
-}
-
-@keyframes walking-2 {
-  0% {
-    transform: translateX(-100%);
-  }
-
-  50% {
-    transform: translateX(-100%);
-  }
-
-  100% {
-    transform: translateX(0%);
   }
 }
 
 @keyframes walking-2-container {
   0% {
-    width: 100%;
+    width: calc(100% + 118px);
   }
 
   50% {
-    width: 100%;
+    width: calc(100% + 118px);
   }
 
   100% {
